# kubernetes-crds-json-schema

./: .gitattributes  .gitignore  README.md  build.py  generate.py  pyproject.toml
.github/workflows/: update.yaml
.zed/: settings.json
crd_json_schema/: json_schema.py  main.py  repository.py  utils.py
schemas/cert-manager/v1.0.2/: issuer-cert-manager-v1alpha2.json
schemas/cert-manager/v1.0.3/: certificaterequest-cert-manager-v1alpha2.json  order-acme-v1.json
schemas/cert-manager/v1.0.4/: certificate-cert-manager-v1alpha2.json
schemas/cert-manager/v1.1.0/: _definitions.json  certificate-cert-manager-v1alpha2.json  certificate-cert-manager-v1beta1.json  issuer-cert-manager-v1alpha3.json  issuer-cert-manager-v1beta1.json
schemas/cert-manager/v1.1.1/: _definitions.json  certificate-cert-manager-v1.json  certificate-cert-manager-v1alpha2.json  clusterissuer-cert-manager-v1beta1.json
schemas/cert-manager/v1.10.1/: _definitions.json
schemas/cert-manager/v1.11.3/: _definitions.json
schemas/cert-manager/v1.12.13/: _definitions.json
schemas/cert-manager/v1.12.16/: _definitions.json
schemas/cert-manager/v1.12.8/: _definitions.json
schemas/cert-manager/v1.15.1/: _definitions.json
schemas/cert-manager/v1.16.5/: _definitions.json
schemas/cert-manager/v1.17.0/: _definitions.json
schemas/cert-manager/v1.2.0/: certificate-cert-manager-v1alpha3.json  certificate-cert-manager-v1beta1.json  certificaterequest-cert-manager-v1.json  certificaterequest-cert-manager-v1alpha3.json  certificaterequest-cert-manager-v1beta1.json  issuer-cert-manager-v1alpha3.json  (+2 more)
(+1140 files in other folders)
